src/objects/ddrive__TeamData__c.object
<CustomObject>
    <fields>
        <fullName>ddrive__Configuration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DD Instance</label>
        <referenceTo>ddrive__Configuration__c</referenceTo>
        <relationshipName>DD_TeamDatas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ddrive__DD_Customized_Team_Fundraising_Page__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customized Team Fundraising Page</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ddrive__DD_Team_Fundraising_Goal_Percentage__c</fullName>
        <label>Team Fundraising Goal Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ddrive__Date_Entered__c</fullName>
        <label>Date Entered</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Team_Num_Donations__c</fullName>
        <label>Team Donation Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Team_Num_Participants__c</fullName>
        <label>Team Participant Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Team_Sum_Donations_Offline__c</fullName>
        <label>Team Total Raised Offline</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Team_Sum_Donations_Online__c</fullName>
        <label>Team Total Raised Online</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Team_Sum_Donations__c</fullName>
        <label>Team Total Raised</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Team_URL_Alias__c</fullName>
        <label>Team URL Alias</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__EventId__c</fullName>
        <label>Event Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Event_Name__c</fullName>
        <label>Event Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Event_Status__c</fullName>
        <label>Event Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ddrive__Fundraising_Goal__c</fullName>
        <label>Fundraising Goal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ddrive__Max_Members__c</fullName>
        <label>Max Members</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ddrive__Name__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Team_Captain_Email__c</fullName>
        <label>Team Captain Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Team_Captain_First_Name__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Team Captain First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Team_Captain_Last_Name__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Team Captain Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DD Team</label>
    <listViews>
        <fullName>ddrive__All</fullName>
        <columns>NAME</columns>
        <columns>ddrive__Name__c</columns>
        <columns>ddrive__External_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DD Teams</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>